fixed word wrapping issue for messages

--- a/src/components/MessagingWindow/styles.css
+++ b/src/components/MessagingWindow/styles.css
@@ -33,3 +33,20 @@
   display: inline-block;
   font-size: 16px;
 }
+
+.message {
+  height: 150px;
+  width: 150px;
+  border-radius: 50%;
+  padding: 50px;
+  word-wrap: break-word;
+
+  display: table;
+  table-layout: fixed;
+  overflow: hidden;
+}
+
+.text-wrapper {
+  display: table-cell;
+  vertical-align: middle;
+}
